Fix error overflow in compact mode

--- a/packages/wix-storybook-utils/src/LiveCodeExample/index.scss
+++ b/packages/wix-storybook-utils/src/LiveCodeExample/index.scss
@@ -232,7 +232,7 @@
 
   .compact & {
     top: 0;
-    height: 100%;
     overflow: auto;
+    border-radius: 6px;
   }
 }
